--- a/contact2.html
+++ b/contact2.html
@@ -15,7 +15,7 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> 
-<script src="js/main.js"></script> 
+<!-- <script src="js/main.js"></script>  -->
 </head>
 
 <body class="fade-box">
