--- a/index.html
+++ b/index.html
@@ -172,8 +172,10 @@
         <a href="company.html"> 会社概要 </a> </div>
     </div>
 	<div class="sec_3_text inview2">
-    <h3>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</h3>
-    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+    <h3>我々はアウトバウンド営業に専門特価した営業のプロフェッショナル集団です。</h3>
+    <p>あらゆる業界の営業課題を最短最速でご支援する事がミッションでございます。
+      リードセールス、クロージングセールス、営業組織立上げまで一気通貫でご依頼頂く事が可能でございます。
+      「営業」で人と企業をツナグ架け橋となるようにクライアントの皆様方のサービスをスケールさせるお手伝いをさせてください。</p>
   </div>  
   </div>
   
@@ -227,7 +229,7 @@
 <section class="sec_4 inview">
   <div class="sec_4_wrap">
     <div class="sec_title"> <img src="img/title_backgroundimg.png" class="title_bg_img">
-      <!--<p class="sec_title_1">ACHIEVEMENTS</p>-->
+      <p class="sec_title_1">ACHIEVEMENTS</p>
       <p class="sec_title_2">事例</p>
       <!-- <p>テキストテキストテキストテキストテキストテキストテキスト</p> --> 
     </div>
