--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
 <title>株式会社RISING INNOVATION – 株式会社RISING INNOVATION は人と未来をツナグ会社です。</title>
 <meta name="description" content="テキストテキストテキストテキストテキストテキストテキストテキスト">	
 <meta name="viewport" content="width=device-width, initial-scale=1">	
-<link rel="icon" href="img/logo.png">	
-<link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">	
+<link rel="icon" href="img/logo.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet" type="text/css" media="screen and (min-width:751px)">
-<link href="css/responsive.css" rel="stylesheet" rel="stylesheet" type="text/css"  media="screen and (max-width:750px)">	
+<link href="css/style.css" rel="stylesheet" type="text/css" media="screen and (min-width:500px)">
+<link href="css/responsive.css" rel="stylesheet" type="text/css"  media="screen and (max-width:501px)">	
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>  
@@ -59,7 +58,7 @@
       </ul>
     </nav>
 	 
-    <!---------------ナビゲーションレスポンシブ------------------>
+    <!---------------レスポンシブナビゲーション------------------>
 <span class="nav_toggle">
   <i></i>
   <i></i>
@@ -103,10 +102,33 @@
             <div class="eff-5"></div>
             <a href="contact2.html#">サービス資料(無料)</a> </div>
         </div>
+		 
       </div>
     </div>
     <img src="img/logo6.png" class="logo2"> </div>
 </div>
+<!---------------レスポンシブメインビジュアル------------------>	
+<div class="res_mainvisual">
+  <div class="main_bg"></div>
+  <div class="mainvisual_wrap">
+    <div class="mainvisual_title">
+      <div class="mainvisual_text_wrap">
+        <p class="mainvisual_text1">営業代行支援</p>
+        <h1 class="mainvisual_text3">人と未来をツナグ<br>
+          セールスイノベーション</h1>
+        <br>
+        <p class="mainvisual_text2">アウトバウンド営業に特化した我々が本気で挑む事は、<br>
+          「革新」的なイノベーションです。<br>
+          成果の出ない営業活動は営業ではありません。<br>
+          最短最速で「成果」にコミットする事をお約束し、<br>
+          クライアントとの皆様と伴走しながら<br>
+          サービスのスケールをご支援させて頂きます。</p>
+        <br>
+       <div class="flex jcc"><a class="res_top_btn1" href="contact.html#">営業のご相談(無料)</a><a class="res_top_btn2" href="contact2.html#">サービス資料(無料)</a></div>   
+      </div>
+    </div>
+    <img src="img/logo6.png" class="logo2"> </div>
+</div>	
 <!---------------企業ロゴ------------------>
 <section class="sec_1">
   <div class="loop_wrap">
@@ -162,34 +184,53 @@
 
 <!---------------TOP会社紹介会社情報ミッション------------------>
 <section class="sec_3 inview">
-  <div class="sec_3_wrap flex">
+  <div class="sec_3_wrap">
     <div class="sec_title title_sec3"> <img src="img/title_backgroundimg.png" class="title_bg_img">
       <p class="sec_title_1">MISSION</p>
       <p class="sec_title_2">会社について</p>
-      <br>
-      <div class="button-4">
+      <!--<div class="button-4">
         <div class="eff-4"></div>
-        <a href="company.html"> 会社概要 </a> </div>
+        <a href="company.html"> 会社概要 </a> </div>-->
     </div>
-	<div class="sec_3_text inview2">
-    <h3>我々はアウトバウンド営業に専門特価した<br>営業のプロフェッショナル集団です。</h3>
-    <p>あらゆる業界の営業課題を最短最速でご支援する事がミッションでございます。
-      リードセールス、クロージングセールス、営業組織立上げまで一気通貫でご依頼頂く事が可能でございます。
-      「営業」で人と企業をツナグ架け橋となるようにクライアントの皆様方のサービスをスケールさせるお手伝いをさせてください。</p>
-  </div>  
+	<div class="inview2 flex">
+	<div class="missino_img"><img src="img/misson_img.png"></div>	
+    <div class="sec_3_text">
+		<h3 class="sec_3_h3">我々はアウトバウンド営業に専門特価した<br>営業のプロフェッショナル集団です。</h3>
+		<h3 class="res_sec_3_h3">我々はアウトバウンド営業に専門特価した営業のプロフェッショナル集団です。</h3>
+    <p>あらゆる業界の営業課題を最短最速でご支援する事がミッションでございます。リードセールス、クロージングセールス、営業組織立上げまで一気通貫でご依頼頂く事が可能でございます。「営業」で人と企業をツナグ架け橋となるようにクライアントの皆様方のサービスをスケールさせるお手伝いをさせてください。</p>
+	</div>	
+  </div>
+	 <div class="button-2">
+    <div class="eff-2"></div>
+    <a href="company.html#"> 会社情報 </a> </div>  
   </div>
   
   <div id="services"></div>
 </section>
-
+<!---------------レスポンシブTOP会社紹介会社情報ミッション------------------>	
+<section class="res_sec_3 inview">
+  <div class="sec_3_wrap">
+    <div class="sec_title title_sec3"> <img src="img/title_backgroundimg.png" class="title_bg_img">
+      <p class="sec_title_1">MISSION</p>
+      <p class="sec_title_2">会社について</p>
+      <br>
+    </div>
+	<div class="sec_3_text inview2">
+    <h3>我々はアウトバウンド営業に専門特価した営業のプロフェッショナル集団です。</h3>
+    <p>あらゆる業界の営業課題を最短最速でご支援する事がミッションでございます。リードセールス、クロージングセールス、営業組織立上げまで一気通貫でご依頼頂く事が可能でございます。「営業」で人と企業をツナグ架け橋となるようにクライアントの皆様方のサービスをスケールさせるお手伝いをさせてください。</p>
+  </div>  
+  </div>
+  <a class="res_sec_btn" href="company.html"> 会社概要 </a>
+  <div id="services"></div>
+</section>	
+<!---------------TOPサービス一覧------------------>
 <section class="sec_2 inview">
 	<div class="sec_2_wrap">
   <div class="sec_title sec_title_4"> <img src="img/title_backgroundimg.png" class="title_bg_img">
     <p class="sec_title_1">SERVICES</p>
     <p class="sec_title_2">サービス一覧</p>
     <br>
-  </div>  <!-- <p class="services_list_title">OURS SERVICES<br>
-    <span>サービス一覧</span></p> -->
+  </div>
   <ul class="services_list">
     <li>
       <dl>
@@ -225,7 +266,7 @@
 </section>
 <div class="sec_2_img"><img src="img/insert_img.png"> </div>
 <div id="achievements"></div>
-<!---------------実績------------------>
+<!---------------TOP実績------------------>
 <section class="sec_4 inview">
   <div class="sec_4_wrap">
     <div class="sec_title"> <img src="img/title_backgroundimg.png" class="title_bg_img">
@@ -290,11 +331,11 @@
     </ul>
   </div>
   <br>
-  <br>
   <div class="button-2">
     <div class="eff-2"></div>
     <a href="blog.html#"> ブログ一覧 </a> </div>
-</div>	  
+</div>
+	<a class="res_sec_btn" href="blog.html#">ブログ一覧</a>
 </section>
 
 <!---------------TOPコンタクト------------------>
@@ -306,7 +347,9 @@
     <div class="contact_btn">
       <div class="eff-contact"></div>
       <a href="contact.html#">お問い合わせページ</a></div>
+	  <div class="flex jcc"><a class="res_top_btn2" href="contact.html#">営業のご相談(無料)</a><a class="res_top_btn2" href="contact2.html#">サービス資料(無料)</a></div>
   </div>
+	
 </section>
 </main>
 <!---------------フッター------------------>
