--- a/company.html
+++ b/company.html
@@ -36,8 +36,11 @@
         <li class="gnavi__list"><a class="gnavi__list_a" href="index.html#services">サービス</a>
           <ul class="dropdown__lists_3">
             <li class="dropdown__list"><a href="#">営業代行支援</a></li>
-            <li class="dropdown__list"><a href="#">電話代行サービス</a></li>
-            <li class="dropdown__list"><a href="#">トークスクリプト構築・作成代行</a></li>
+            <li class="dropdown__list"><a href="#">リードセールス支援</a></li>
+            <li class="dropdown__list"><a href="#">インサイドセールス支援</a></li>
+            <li class="dropdown__list"><a href="#">フィールドセールス支援</a></li>
+            <li class="dropdown__list"><a href="#">セールスコンサルティング支援</a></li>
+            <li class="dropdown__list"><a href="#">セールスマーケティング支援</a></li>
           </ul>
         </li>
         <li><a class="gnavi__list_a" href="index.html#achievements">事例</a></li>
