--- a/company.html
+++ b/company.html
@@ -101,12 +101,8 @@
     </div>
 		</div> 
     <!---------------------会社情報------------------------->	
-    <div class="company_wrap">
+    <!--<div class="company_wrap">
       <div class="company_table_wrap">
-        <!-- <p class="table_title">- 会社情報 -</p> -->
-        
-        <!-- <p class="table_text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
-          テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p> -->
         <table class="company_table">
           <tr>
             <th>会社名</th>
@@ -157,7 +153,7 @@
           </tr>
         </table>
       </div>
-		</div>
+		</div>-->
    <!---------------------レスポンシブ会社情報------------------------->	
     <div class="res_company_wrap">
       <div class="company_table_wrap">
@@ -276,7 +272,7 @@
   </ul>
 
 </div>	 
-	 
+<div class="sec_2_img"><img src="img/insert_img4.png"></div>	 
  </section>	 
 </main>
 <!---------------------フッター------------------------->	
