--- a/contact.html
+++ b/contact.html
@@ -202,6 +202,7 @@
     </div>
     </div>
   </section>
+<div class="sec_2_img"><img src="img/insert_img2.png"></div>
 </main>
 <!---------------------フッター-------------------------> 
 <footer>
