--- a/contact2.html
+++ b/contact2.html
@@ -210,7 +210,7 @@
     </div>
 	
 	
-    
+   <div class="sec_2_img"><img src="img/insert_img3.png"></div> 
   </section>
 </main>
 <!---------------------フッター------------------------->
