--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       <ul class="flex">
         <li class="gnavi__list"><a class="gnavi__list_a" href="index.html#mission">会社について</a>
           <ul class="dropdown__lists">
-            <li class="dropdown__list"><a href="index.html#mission"><span class="dropdown__list_en">MISSION</span><br><span class="dropdown__list_jp">ミッション</span></a></li>
-            <li class="dropdown__list"><a href="company.html#"><span class="dropdown__list_en">COMPANY</span><br><span class="dropdown__list_jp">会社概要</span></a></li>
-            <li class="dropdown__list"><a href="company.html#members"><span class="dropdown__list_en">MEMBERS</span><br><span class="dropdown__list_jp">メンバー</span></a></li>
+            <li class="dropdown__list"><a href="index.html#mission">ミッション<!--<span class="dropdown__list_en">MISSION</span><br><span class="dropdown__list_jp">ミッション</span>--></a></li>
+            <li class="dropdown__list"><a href="company.html#"><!--<span class="dropdown__list_en">COMPANY</span><br><span class="dropdown__list_jp">会社概要</span>-->会社概要</a></li>
+            <li class="dropdown__list"><a href="company.html#members">メンバー<!--<span class="dropdown__list_en">MEMBERS</span><br><span class="dropdown__list_jp">メンバー</span>--></a></li>
           </ul>
         </li>
         <li class="gnavi__list"><a class="gnavi__list_a" href="#">サービス</a>
           <ul class="dropdown__lists_3">
-			<li class="dropdown__list"><a href="index.html#services"><span class="dropdown__list_en">SERVICES</span><br><span class="dropdown__list_jp">サービス一覧</span></a></li> 
+			<li class="dropdown__list"><a href="index.html#services">サービス一覧<!--<span class="dropdown__list_en">SERVICES</span><br><span class="dropdown__list_jp">サービス一覧</span>--></a></li> 
             <li class="dropdown__list"><a href="#">営業代行支援</a></li>
             <li class="dropdown__list"><a href="#">リードセールス支援</a></li>
             <li class="dropdown__list"><a href="#">インサイドセールス支援</a></li>
@@ -50,15 +50,15 @@
           </ul>
         </li>
         <li><a class="gnavi__list_a" href="index.html#achievements">事例</a></li>
-        <li  class="gnavi__list"><a class="gnavi__list_a" href="#">お問い合わせ</a>
+        <li  class="gnavi__list"><a class="gnavi__list_a" href="contact.html#">お問い合わせ</a>
           <ul class="dropdown__lists_3">
-            <li class="dropdown__list"><a href="contact2.html#"><span class="dropdown__list_en">DOCUMENT</span><br><span class="dropdown__list_jp">サービス資料</span></a></li>
-            <li class="dropdown__list"><a href="contact.html#"><span class="dropdown__list_en">CONTACT</span><br><span class="dropdown__list_jp">お問合せ</span></a></li>
+            <li class="dropdown__list"><a href="contact2.html#"><!--<span class="dropdown__list_en">DOCUMENT</span><br><span class="dropdown__list_jp">サービス資料</span>-->サービス資料</a></li>
+            <li class="dropdown__list"><a href="contact.html#"><!--<span class="dropdown__list_en">CONTACT</span><br><span class="dropdown__list_jp">お問合せ</span>-->おい問合せ</a></li>
           </ul>
         </li>
         <li class="gnavi__list"><a class="gnavi__list_a" href="#">BLOG</a>
           <ul class="dropdown__lists_2">
-            <li class="dropdown__list"><a href="blog.html#"><span class="dropdown__list_en">BLOG</span><br><span class="dropdown__list_jp">ブログ一覧</span></a></li>
+            <li class="dropdown__list"><a href="blog.html#"><!--<span class="dropdown__list_en">BLOG</span><br><span class="dropdown__list_jp">ブログ一覧</span>-->ブログ一覧</a></li>
           </ul>
         </li>
       </ul>
@@ -178,7 +178,9 @@
            <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
            <li class="d-demo__item"><img src="img/logo/loop1.png" alt></li>
         </ul>
+<div id="mission"></div>	   
    </div>
+ 	
 </div> 	  
     <!--<div class="loop_wrap"> <img src="img/logo/loop3.png"><img src="img/logo/loop4.png"> </div>
     <div class="loop_wrap"> <img src="img/logo/loop5.png"><img src="img/logo/loop1.png"> </div>-->
@@ -221,7 +223,7 @@
         <li class="scroll-infinity__item"><img src="img/logo/11.webp" /></li>
       </ul>
     </div> -->
-    <div id="mission"></div>
+   
   </section>
   
   <!---------------TOP会社紹介会社情報ミッション------------------>
@@ -271,7 +273,7 @@
   <!---------------TOPサービス一覧------------------>
   <section class="sec_2 inview">
     <div class="sec_2_wrap">
-      <div class="sec_title sec_title_4"> <img src="img/title_backgroundimg.png" class="title_bg_img">
+      <div class="sec_title sec_title_4"> <img src="img/title_backgroundimg2.png" class="title_bg_img2">
         <p class="sec_title_1">SERVICES</p>
         <p class="sec_title_2">サービス一覧</p>
         <br>
@@ -379,7 +381,7 @@
   <!---------------ブログ------------------>
   <section class="sec_5 inview">
     <div class="sec_5_wrap">
-      <div class="sec_title"> <img src="img/title_backgroundimg.png" class="title_bg_img">
+      <div class="sec_title"> <img src="img/title_backgroundimg2.png" class="title_bg_img2">
         <p class="sec_title_1">BLOG</p>
         <p class="sec_title_2">ブログ</p>
       </div>
